--- a/css/resume.scss
+++ b/css/resume.scss
@@ -183,6 +183,7 @@ a{color:$linkColor; text-decoration:none;}
   font-weight:300;
   min-height:100%;
   min-height:100vh;
+  color:rgb(0, 0, 0);
   @include breakpoint(brother-bear) { width: 100%; } 
   h3.experience-title {
     color:$linkColor;
@@ -191,6 +192,7 @@ a{color:$linkColor; text-decoration:none;}
     font-size:1.2em;
     margin-bottom:20px;
     font-weight:400;
+    color:rgb(0, 0, 0);
   }
   .company-wrapper {
     width:30%;
@@ -198,6 +200,7 @@ a{color:$linkColor; text-decoration:none;}
     text-align:left;
     padding-right:5%;
     margin-bottom:60px;
+    color:rgb(0, 0, 0);
     @include breakpoint(baby-bear) {width:100%; margin-bottom:20px;} 
   }
   .job-wrapper {
@@ -209,7 +212,7 @@ a{color:$linkColor; text-decoration:none;}
     @include breakpoint(baby-bear) {width:100%;margin-bottom:40px;} 
   }
   .experience-title {
-      color:white;
+      color:rgb(0, 0, 0);
       margin-bottom:15px;;
     }
 }
